# ntfsvc-client

./: README.md
examples/go/: README.md  go.mod  go.sum  main.go
examples/java/: README.md  build.gradle.kts
examples/java/src/main/java/: Main.java
examples/python/: README.md  main.py  pyproject.toml
